Implement initial support for postgresql configuration from a CRD
The implementations updates the DCS directly and includes some of the of the blacklisted parameters and some predefined values to apply in every cluster creation.

Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

Fixes #23
Fixes #26

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,14 @@ verify code:
   script:
     - 'mvn $MAVEN_CLI_OPTS verify -Psafer'
 
+verify checker:
+  stage: verify
+  tags:
+    - stackgres-runner
+  script:
+    - 'mvn $MAVEN_CLI_OPTS verify -Pchecker'
+  allow_failure: true
+
 native-image build:
   stage: package
   tags:
