--- a/operator/src/main/resources/application.properties
+++ b/operator/src/main/resources/application.properties
@@ -3,20 +3,16 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 #
 
-# Quarkus Configuration
-quarkus.application.name=stackgres-operator
-quarkus.http.port=8080
-quarkus.http.test-port=8082
-
 # Logger Production
-quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%n
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%n
 quarkus.log.console.level=INFO
 quarkus.log.category."io.quarkus".level=WARN
 
 # Logger Development
-quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{3.}] (%t) %s%e%n
+%dev.quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{4.}] (%t) %s%e%n
 %dev.quarkus.log.console.level=ALL
 %dev.quarkus.log.category."io.stackgres".level=ALL
+%dev.quarkus.log.category."io.quarkus".level=DEBUG
 
 # StackGres Configuration
 stackgres.namespace = stackgres-operator
