Initial implementation of resources profiles
Allow the use of a CRD to define the configuration for resources being used in StackGres kubernetes pod.

This is just an initial implementation that defines the basics of cpu, memory and storage resources.

Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

--- a/example/stackgres_v1alpha1_sgpgconfig_crd.yaml
+++ b/example/stackgres_v1alpha1_sgpgconfig_crd.yaml
@@ -8,7 +8,7 @@ spec:
   scope: Namespaced
   names:
     kind: StackGresPostgresConfig
-    listKind: StackGresConfigList
+    listKind: StackGresPostgresConfigList
     plural: sgpgconfigs
     singular: sgpgconfig
   validation:
