--- a/example/kubernetes.yaml
+++ b/example/kubernetes.yaml
@@ -32,6 +32,8 @@ items:
     - clusterrolebindings
     - serviceaccounts
     - namespaces
+    - roles
+    - rolebindings
     verbs:
     - '*'
   - apiGroups: ["apiextensions.k8s.io", "customresourcedefinitions.apiextensions.k8s.io"]
@@ -42,6 +44,8 @@ items:
   - apiGroups: ["stackgres.io"]
     resources:
     - sgclusters
+    - sgprofiles
+    - sgpgconfigs
     verbs:
     - watch
     - list
@@ -65,7 +69,7 @@ items:
   metadata:
     labels:
       app: "stackgres-operator"
-      version: "0.6alpha1"
+      version: "0.6-jvm"
       group: "stackgres.io"
     name: "stackgres-operator"
     namespace: "stackgres"
@@ -76,7 +80,7 @@ items:
       targetPort: 8080
     selector:
       app: "stackgres-operator"
-      version: "0.6alpha1"
+      version: "0.6-jvm"
       group: "stackgres.io"
     type: "ClusterIP"
 - apiVersion: "apps/v1"
@@ -84,7 +88,7 @@ items:
   metadata:
     labels:
       app: "stackgres-operator"
-      version: "0.6alpha1"
+      version: "0.6-jvm"
       group: "stackgres.io"
     name: "stackgres-operator"
     namespace: "stackgres"
@@ -93,13 +97,13 @@ items:
     selector:
       matchLabels:
         app: "stackgres-operator"
-        version: "0.6alpha1"
+        version: "0.6-jvm"
         group: "stackgres.io"
     template:
       metadata:
         labels:
           app: "stackgres-operator"
-          version: "0.6alpha1"
+          version: "0.6-jvm"
           group: "stackgres.io"
       spec:
         serviceAccountName: "stackgres-operator"
@@ -109,8 +113,8 @@ items:
             valueFrom:
               fieldRef:
                 fieldPath: "metadata.namespace"
-          image: "stackgres/operator:0.6alpha1"
-          imagePullPolicy: "IfNotPresent"
+          image: "stackgres/operator:0.6-jvm"
+          imagePullPolicy: "Always"
           name: "stackgres-operator"
           ports:
           - containerPort: 8080
