--- a/operator/pom.xml
+++ b/operator/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>io.stackgres</groupId>
@@ -16,14 +18,6 @@
       <groupId>io.stackgres</groupId>
       <artifactId>common</artifactId>
       <version>${project.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-scheduler</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-jackson</artifactId>
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -86,10 +80,10 @@
         </property>
       </activation>
       <dependencies>
-        <dependency>
-          <!-- Workaround for:
+        <!-- Workaround for:
           Error: Class initialization failed: org.hibernate.validator.internal.constraintvalidators.bv.time.past.PastValidatorForReadablePartial
           Original exception that caused the problem: java.lang.NoClassDefFoundError: org/joda/time/ReadableInstant -->
+        <dependency>
           <groupId>joda-time</groupId>
           <artifactId>joda-time</artifactId>
           <version>2.10.3</version>
