--- a/operator/pom.xml
+++ b/operator/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.stackgres</groupId>
     <artifactId>stackgres-parent</artifactId>
-    <version>0.6alpha2</version>
+    <version>0.6alpha3-SNAPSHOT</version>
   </parent>
 
   <artifactId>operator</artifactId>
