--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>io.stackgres</groupId>
   <artifactId>stackgres-parent</artifactId>
-  <version>0.6alpha3</version>
+  <version>0.6alpha4-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Parent POM</name>
 
@@ -30,7 +30,7 @@
   <scm>
     <url>https://gitlab.com/stackgres/stackgres</url>
     <developerConnection>scm:git:git@gitlab.com:stackgres/stackgres.git</developerConnection>
-    <tag>0.6alpha3</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
