--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.stackgres</groupId>
     <artifactId>stackgres-parent</artifactId>
-    <version>0.6alpha4-SNAPSHOT</version>
+    <version>0.6alpha4</version>
   </parent>
 
   <artifactId>common</artifactId>
