Set the limits of resources the same as the requests
This also partially fixes #30 increasing the liveness initial delay.

Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

Fixes #36

--- a/example/stackgres_v1alpha1_sgprofile_cr.yaml
+++ b/example/stackgres_v1alpha1_sgprofile_cr.yaml
@@ -3,9 +3,9 @@ kind: StackGresProfile
 metadata:
   name: size-xs
 spec:
-  cpu: "400m"
-  memory: "1Gi"
-  storage: "10Gi"
+  cpu: "500m"
+  memory: "512Mi"
+  storage: "5Gi"
 ---
 apiVersion: stackgres.io/v1alpha1
 kind: StackGresProfile
