Fixed operator deployment image tag

--- a/install/kubernetes/chart/stackgres-operator/templates/deployment.yaml
+++ b/install/kubernetes/chart/stackgres-operator/templates/deployment.yaml
@@ -24,7 +24,7 @@ spec:
       serviceAccountName: {{ .Values.operatorName }}
       containers:
       - name: {{ .Values.operatorName }}
-        image: "{{ .Values.image.name }}:{{ .Values.operatorVersion }}"
+        image: "{{ .Values.image.name }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}        
         ports:
         - containerPort: 8080
