--- a/pom.xml
+++ b/pom.xml
@@ -46,11 +46,13 @@
     <quarkus.version>0.21.1</quarkus.version>
     <kubernetes-client.version>4.4.2</kubernetes-client.version>
     <immutables.version>2.7.5</immutables.version>
+    <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
     <checkstyle.version>8.23</checkstyle.version>
     <spotbugs.version>4.0.0-beta3</spotbugs.version>
     <checker.version>2.10.1</checker.version>
     <pmd.version>6.17.0</pmd.version>
     <errorprone.version>2.3.3</errorprone.version>
+    <docker-junit-extension.version>1.2.3</docker-junit-extension.version>
     <!-- Plugins versions -->
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
     <jar-plugin.version>3.1.2</jar-plugin.version>
@@ -83,6 +85,12 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <dependency>
+        <groupId>com.ongres</groupId>
+        <artifactId>docker-junit-extension</artifactId>
+        <scope>test</scope>
+        <version>${docker-junit-extension.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -102,6 +110,11 @@
       <artifactId>value</artifactId>
       <version>${immutables.version}</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>${javax.annotation-api.version}</version>
     </dependency>
     <dependency>
       <groupId>org.checkerframework</groupId>
