--- a/install/kubernetes/chart/stackgres-operator/templates/service-account.yaml
+++ b/install/kubernetes/chart/stackgres-operator/templates/service-account.yaml
@@ -1,5 +1,9 @@
+{{- if .Values.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.operatorName }}
+  {{- if .Values.namespace.create }}
   namespace: {{ .Values.operatorNamespace }}
+  {{- end }}
+{{- end }}
