--- a/install/kubernetes/chart/stackgres-operator/templates/cluster-crd.yaml
+++ b/install/kubernetes/chart/stackgres-operator/templates/cluster-crd.yaml
@@ -2,14 +2,18 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: sgclusters.{{ .Values.group }}
-  # annotations:
-  #   "helm.sh/hook": crd-install
+  annotations:
+    "helm.sh/hook": crd-install
 spec:
   group: {{ .Values.group }}
-  version: {{ .Values.version }}
+  versions:
+    - name: v1
+      served: true
+      storage: true
+  scope: Namespaced  
   names:
     kind: StackGresCluster
     listKind: StackGresClusterList
     plural: sgclusters
     singular: sgcluster
-    scope: Namespaced
+    
