--- a/install/kubernetes/chart/stackgres-operator/templates/pgconfig-crd.yaml
+++ b/install/kubernetes/chart/stackgres-operator/templates/pgconfig-crd.yaml
@@ -2,11 +2,14 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   name: sgpgconfigs.{{ .Values.group }}
-  # annotations:
-  #   "helm.sh/hook": crd-install
+  annotations:
+    "helm.sh/hook": crd-install
 spec:
   group: {{ .Values.group }}
-  version: {{ .Values.version }}
+  versions:
+    - name: v1
+      served: true
+      storage: true
   scope: Namespaced
   names:
     kind: StackGresPostgresConfig
@@ -15,13 +18,16 @@ spec:
     singular: sgpgconfig
   validation:
     openAPIV3Schema:
+      type: object
       required: ["spec"]
+      description: "Params for PostgreSQL configuration"
       properties:
         spec:
-          required: ["pg_version","postgresql.conf"]
+          type: object
           properties:
             pg_version:
-              type: integer
-              minimum: 11
+              type: float
+              minimum: {{ .Values.postgresVersion.minimum }}
             postgresql.conf:
               type: object
+          required: ["pg_version","postgresql.conf"]
