--- a/operator/pom.xml
+++ b/operator/pom.xml
@@ -128,5 +128,35 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>integration</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-failsafe-plugin</artifactId>
+            <version>${failsafe-plugin.version}</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>integration-test</goal>
+                  <goal>verify</goal>
+                </goals>
+                <configuration>
+                  <trimStackTrace>false</trimStackTrace>
+                  <includes>
+                    <include>**/It*.java</include>
+                    <include>**/*It.java</include>
+                    <include>**/*ItCase.java</include>
+                  </includes>
+                  <excludes>
+                  </excludes>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 </project>
